# kinova-moveit-bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/kinova_moveit_bridge/: kinova_gripper_bridge.hpp  kinova_moveit_bridge_node.hpp
launch/: kinova_bringup.launch.py
src/: kinova_gripper_bridge.cpp  kinova_moveit_bridge_node.cpp  main.cpp
test/: test_bridge_integration.cpp
